--- a/res/layout/activity_user_details.xml
+++ b/res/layout/activity_user_details.xml
@@ -52,101 +52,21 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
-
-        android:weightSum="2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="1"
-            app:boxStrokeWidth="0.5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:boxStrokeColor="#0C73EB"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:hint="Pincode"
-            app:hintTextColor="#0C73EB">
-
-            <!--this is the actual edit text which takes the input-->
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/pincode"
-                android:textColor="#000000"
-                android:inputType="number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-        <Button
-            android:id="@+id/verify"
-            android:background="@drawable/semi_round_button"
-            android:textColor="#FFFFFF"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textAllCaps="false"
-            android:minHeight="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Check Availability"/>
-    </LinearLayout>
 
     <LinearLayout
-        android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/border">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="1"
-            app:boxStrokeWidth="0.5dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:boxStrokeColor="#0C73EB"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:hint="State"
-            app:hintTextColor="#0C73EB">
-
-            <!--this is the actual edit text which takes the input-->
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/state"
-                android:textColor="#000000"
-                android:inputType="text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="1"
-            app:boxStrokeWidth="0.5dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:boxStrokeColor="#0C73EB"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:hint="City"
-            app:hintTextColor="#0C73EB">
-
-            <!--this is the actual edit text which takes the input-->
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/city"
-                android:textColor="#000000"
-                android:inputType="text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:spinnerMode="dropdown"
+            />
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -193,20 +113,22 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:padding="20dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="bottom">
-    <Button
-        android:textColor="#FFFFFF"
-        android:id="@+id/save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_button"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:layout_margin="50dp"
-        android:text="Save details" />
-
+        android:orientation="vertical">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Send OTP"
+            android:textAllCaps="true"
+            android:backgroundTint="#ED5A6B"
+            android:layout_marginTop="16dp"
+            android:textSize="20dp"
+            android:padding="15dp"
+            android:textStyle="bold"
+            app:cornerRadius="10dp"
+            />
     </LinearLayout>
 </LinearLayout>
