--- a/res/layout/activity_change_address.xml
+++ b/res/layout/activity_change_address.xml
@@ -30,100 +30,19 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
-
-        android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/border">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="1"
-            app:boxStrokeWidth="0.5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:boxStrokeColor="#0C73EB"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:hint="Pincode"
-            app:hintTextColor="#0C73EB">
-
-            <!--this is the actual edit text which takes the input-->
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/pincode_change"
-                android:textColor="#000000"
-                android:inputType="number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-        <Button
-            android:id="@+id/verify_change"
-            android:background="@drawable/semi_round_button"
-            android:textColor="#FFFFFF"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textAllCaps="false"
-            android:minHeight="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Check Availability"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:weightSum="2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="1"
-            app:boxStrokeWidth="0.5dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:boxStrokeColor="#0C73EB"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:hint="State"
-            app:hintTextColor="#0C73EB">
-
-            <!--this is the actual edit text which takes the input-->
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/state_change"
-                android:textColor="#000000"
-                android:inputType="text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="1"
-            app:boxStrokeWidth="0.5dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:boxStrokeColor="#0C73EB"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:hint="City"
-            app:hintTextColor="#0C73EB">
-
-            <!--this is the actual edit text which takes the input-->
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/city_change"
-                android:textColor="#000000"
-                android:inputType="text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:spinnerMode="dropdown"
+            />
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
