--- a/res/layout/activity_confirm.xml
+++ b/res/layout/activity_confirm.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
+            android:checkable="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -87,7 +88,7 @@
                     android:text="Change"
                     android:textColor="#ED5A6B" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -135,7 +136,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:text="Zirang road, behind MSEB power house, Bhom, Maharashtra 416510" />
+                    android:text="Zirang road, behind MSEB power house, Bhom, Sawantwadi, Sindhudurg, Maharashtra, 416510" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
