--- a/res/layout/first_fragment.xml
+++ b/res/layout/first_fragment.xml
@@ -786,6 +786,7 @@
             android:background="#c0c0c0" />
         <androidx.recyclerview.widget.RecyclerView
             android:visibility="gone"
+            android:paddingBottom="100dp"
             android:id="@+id/view23"
             android:nestedScrollingEnabled="false"
             android:layout_width="match_parent"
@@ -808,12 +809,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.6" />
-
-
-
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
