--- a/res/layout/second_fragment.xml
+++ b/res/layout/second_fragment.xml
@@ -227,6 +227,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/view6"
                 android:visibility="gone"
+                android:paddingBottom="100dp"
                 android:nestedScrollingEnabled="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
