--- a/res/layout/third_fragment.xml
+++ b/res/layout/third_fragment.xml
@@ -42,163 +42,15 @@
                 app:sliderScrollTimeInSec="4"
                 app:sliderStartAutoCycle="true" />
 
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/text1"
-                android:textAllCaps="true"
-                android:fontFamily="sans-serif"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="Sandwiches"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <View
-                android:visibility="gone"
-                android:id="@+id/v1"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginBottom="5dp"
-                android:background="#c0c0c0" />
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/view1"
-                android:visibility="gone"
+                android:id="@+id/view"
+                android:paddingBottom="100dp"
                 android:nestedScrollingEnabled="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/text2"
-                android:textAllCaps="true"
-                android:fontFamily="sans-serif"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="Milkshakes"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <View
-                android:visibility="gone"
-                android:id="@+id/v2"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginBottom="5dp"
-                android:background="#c0c0c0" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/view2"
-                android:visibility="gone"
-                android:nestedScrollingEnabled="false"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/text3"
-                android:textAllCaps="true"
-                android:fontFamily="sans-serif"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="Mojito"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <View
-                android:visibility="gone"
-                android:id="@+id/v3"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginBottom="5dp"
-                android:background="#c0c0c0" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/view3"
-                android:visibility="gone"
-                android:nestedScrollingEnabled="false"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/text4"
-                android:textAllCaps="true"
-                android:fontFamily="sans-serif"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="Beverages"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <View
-                android:visibility="gone"
-                android:id="@+id/v4"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginBottom="5dp"
-                android:background="#c0c0c0" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/view4"
-                android:visibility="gone"
-                android:nestedScrollingEnabled="false"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/text5"
-                android:textAllCaps="true"
-                android:fontFamily="sans-serif"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="Snacks"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <View
-                android:visibility="gone"
-                android:id="@+id/v5"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginBottom="5dp"
-                android:background="#c0c0c0" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/view5"
-                android:visibility="gone"
-                android:nestedScrollingEnabled="false"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
